tests/golden/type_errors/generic_method_conflicting_inference.cd
struct Box { value: number }
impl Box {
  fun same<T>(left: T, right: T): T { return left; }
}
let box: Box = Box { value: 0 };
box.same(1, "x");
