tests/golden/type_errors/generic_method_conflicting_inference.err
Type error at 6:16: type parameter T inferred as number and string
  box.same(1, "x");
                 ^
